--- a/app/views/tournaments/show.html.erb
+++ b/app/views/tournaments/show.html.erb
@@ -1,1 +1,3 @@
-<%= render partial: @tournament_view_model, as: :vm %>
+<%= render partial: 'view_models/tournament',
+           object: @tournament_view_model,
+           as: :vm %>
