--- a/app/views/view_models/_character_entry.html.erb
+++ b/app/views/view_models/_character_entry.html.erb
@@ -1,4 +1,4 @@
-<% cache vm do %>
+<% cache vm.dependencies do %>
     <div class="<%= vm.main_div_class %>" style="<%= vm.main_div_style %>">
         <%= vm.avatar_div %>
         <%= vm.stats_div %>
