--- a/app/views/view_models/_winners_losers_popover.html.erb
+++ b/app/views/view_models/_winners_losers_popover.html.erb
@@ -1,4 +1,4 @@
-<% cache vm do %>
+<% cache vm.dependencies do %>
     <div class="winners-losers-popover-view-model">
         <%= vm.yet_to_play_div %>
         <%= vm.winners_losers_div %>
