--- a/app/views/tournaments/characters_by_average_votes.html.erb
+++ b/app/views/tournaments/characters_by_average_votes.html.erb
@@ -2,4 +2,6 @@
   <h1>Characters <small>Sorted by average votes gained over their matches in Saimoe <%= @tournament.year %></small></h1>
 </div>
 
-<%= render partial: @view_model, as: :vm %>
+<%= render partial: 'view_models/statistics_list',
+           object: @view_model,
+           as: :vm %>
