--- a/app/views/view_models/_date_match.html.erb
+++ b/app/views/view_models/_date_match.html.erb
@@ -1,10 +1,12 @@
-<% cache vm do %>
+<% cache vm.dependencies do %>
     <div class="date-match-view-model container-fluid">
         <div class="row-fluid">
             <div class="span-5">
                 <%= vm.render_title %>
                 <div class="match-view">
-                    <%= render partial: @character_entries, as: :vm %>
+                    <%= render partial: 'view_models/character_entry',
+                               collection: @character_entries,
+                               as: :vm %>
                 </div>
                 <%= vm.render_match_view %>
             </div>
