--- a/app/views/view_models/_final_matches.html.erb
+++ b/app/views/view_models/_final_matches.html.erb
@@ -1,4 +1,4 @@
-<% cache vm do %>
+<% cache vm.dependencies do %>
     <div class="final-matches-view-model">
         <% if vm.victory_image_tag %>
             <div class="victory-image">
@@ -8,26 +8,40 @@
         <% end %>
 
         <div class="final">
-            <%= render partial: vm.grand_final_view_model, as: :vm %>
+            <%= render partial: 'view_models/match',
+                       object: vm.grand_final_view_model,
+                       as: :vm %>
         </div>
 
         <div class="cb"></div>
 
         <div class="quarter-final left">
-            <%= render partial: vm.left_quarter_final_view_models[0], as: :vm %>
+            <%= render partial: 'view_models/match',
+                       object: vm.left_quarter_final_view_models[0],
+                       as: :vm %>
             <div class="cb"></div>
-            <%= render partial: vm.left_quarter_final_view_models[1], as: :vm %>
+            <%= render partial: 'view_models/match',
+                       object: vm.left_quarter_final_view_models[1],
+                       as: :vm %>
         </div>
         <div class="semi-final left">
-            <%= render partial: vm.left_semi_final_view_model, as: :vm %>
+            <%= render partial: 'view_models/match',
+                       object: vm.left_semi_final_view_model,
+                       as: :vm %>
         </div>
         <div class="semi-final right">
-            <%= render partial: vm.right_semi_final_view_model, as: :vm %>
+            <%= render partial: 'view_models/match',
+                       object: vm.right_semi_final_view_model,
+                       as: :vm %>
         </div>
         <div class="quarter-final right">
-            <%= render partial: vm.right_quarter_final_view_models[0], as: :vm %>
+            <%= render partial: 'view_models/match',
+                       object: vm.right_quarter_final_view_models[0],
+                       as: :vm %>
             <div class="cb"></div>
-            <%= render partial: vm.right_quarter_final_view_models[1], as: :vm %>
+            <%= render partial: 'view_models/match',
+                       object: vm.right_quarter_final_view_models[1],
+                       as: :vm %>
         </div>
 
         <div class="cb"></div>
@@ -38,9 +52,13 @@
             <div class="last-16">
                 <% vm.last_16_view_models.each do |matches_block| %>
                     <div class="last-16-block">
-                        <%= render partial: matches_block[0], as: :vm %>
+                        <%= render partial: 'view_models/match',
+                                   object: matches_block[0],
+                                   as: :vm %>
                         <div class="cb"></div>
-                        <%= render partial: matches_block[1], as: :vm %>
+                        <%= render partial: 'view_models/match',
+                                   object: matches_block[1],
+                                   as: :vm %>
                     </div>
                 <% end %>
             </div>
