--- a/app/views/view_models/_match.html.erb
+++ b/app/views/view_models/_match.html.erb
@@ -1,8 +1,10 @@
-<% cache vm do %>
+<% cache vm.dependencies do %>
     <div class="match-view-model <%= vm.info_position_class %>" style="<%= vm.style %>">
         <div class="match-entries <%= vm.info_position_class %>">
             <% vm.character_entries.each.with_index do |ce, i| %>
-                <%= render partial: ce, as: :vm %>
+                <%= render partial: 'view_models/character_entry',
+                           object: ce,
+                           as: :vm %>
                 <% if vm.info_position_class == 'info-bottom' && i.odd? %>
                     <div class="cb"></div>
                 <% end %>
