--- a/app/views/view_models/_single_tournament_history.html.erb
+++ b/app/views/view_models/_single_tournament_history.html.erb
@@ -1,4 +1,4 @@
-<% cache vm do %>
+<% cache vm.dependencies do %>
     <div class="single-tournament-history-view-model">
         <dt>
             <%= vm.tournament.year %>
@@ -9,15 +9,17 @@
             <div class="btn-group">
                 <% vm.visible_stages.each do |stage| %>
                     <button class="btn <%= vm.button_class(stage) %>"
-                        rel="html_named_popover_<%= vm.tournament.year %>_<%= stage %>"
+                        rel="html_named_popover_<%= vm.popover_name(stage) %>"
                         data-trigger="hover click"
                         data-placement="top">
                         <%= MatchInfo.pretty_stage(stage) %>
                     </button>
                 <% end %>
                 <% vm.participated_stages.each do |stage| %>
-                    <div rel="html_named_popover_<%= vm.tournament.year %>_<%= stage %>_content">
-                        <%= render partial: vm.popover_view_model, as: :vm %>
+                    <div rel="html_named_popover_<%= vm.popover_name(stage) %>_content">
+                        <%= render partial: 'view_models/winners_losers_popover',
+                                   object: vm.popover_view_model,
+                                   as: :vm %>
                     </div>
                 <% end %>
             </div>
