Fix some bugs, cache a bit more, add 2013 info

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -72,7 +72,7 @@ table.table {
 
 // Nav bar changes
 
-p.top-subtitle {
+a.top-subtitle {
     font-weight: bold;
     padding-left: 15px;
     padding-right: 15px;
