--- a/app/views/view_models/_tournament_history.html.erb
+++ b/app/views/view_models/_tournament_history.html.erb
@@ -1,7 +1,7 @@
 <% cache vm.dependencies do %>
     <dl class="dl-horizontal">
         <%= render partial: 'view_models/single_tournament_history',
-                   object: @single_tournament_view_models,
+                   collection: vm.single_tournament_view_models,
                    as: :vm %>
     </dl>
 <% end %>
