--- a/app/views/voice_actors/show.html.erb
+++ b/app/views/voice_actors/show.html.erb
@@ -26,6 +26,7 @@
 
 <div class="row-fluid">
   <div class="span6">
+    <h4>Total votes across all tournaments</h4>
     <%= render partial: 'view_models/statistics_list',
                object: @statistics_list_view_model,
                as: :vm %>
