--- a/app/assets/stylesheets/view_models/winners_losers_popover_view_model.css.less
+++ b/app/assets/stylesheets/view_models/winners_losers_popover_view_model.css.less
@@ -6,10 +6,14 @@
 .winners-losers-popover-view-model {
     table {
         &.left-table {
-            padding-right: 0.15em;
+            margin-right: 0.5em;
         }
         &.right-table {
-            padding-left: 0.15em;
+            margin-left: 0.5em;
+        }
+        .table-title {
+            font-size: larger;
+            padding-bottom: 0.3em;
         }
     }
     td {
