--- a/app/views/series/index.html.erb
+++ b/app/views/series/index.html.erb
@@ -6,20 +6,22 @@
   </div>
 </div>
 
-<%= render partial: "shared/alpha_pagination",
-           locals: {default_letter: @ap.default_letter, active_letters: @ap.active_letters} %>
+<% cache do %>
+  <%= render partial: "shared/alpha_pagination",
+             locals: {default_letter: @ap.default_letter, active_letters: @ap.active_letters} %>
 
-<div class="row-fluid">
-  <% @ap.get_data.each do |l_data| %>
-    <div class="span<%= 12 / @ap.real_no_of_columns %>">
-      <% l_data.each do |letter, s_data| %>
-        <h3><a name="<%= letter %>" class="anchor"><%= letter %></a></h3>
-        <div class="well">
-          <% s_data.each do |series| %>
-            <p><%= link_to(series.name, series_path(series)) %></p>
-          <% end %>
-        </div>
-      <% end %>
-    </div>
-  <% end %>
-</div>
+  <div class="row-fluid">
+    <% @ap.get_data.each do |l_data| %>
+      <div class="span<%= 12 / @ap.real_no_of_columns %>">
+        <% l_data.each do |letter, s_data| %>
+          <h3><a name="<%= letter %>" class="anchor"><%= letter %></a></h3>
+          <div class="well">
+            <% s_data.each do |series| %>
+              <p><%= link_to(series.name, series_path(series)) %></p>
+            <% end %>
+          </div>
+        <% end %>
+      </div>
+    <% end %>
+  </div>
+<% end %>
