--- a/app/views/view_models/_date_match.html.erb
+++ b/app/views/view_models/_date_match.html.erb
@@ -1,16 +1,15 @@
 <% cache vm.dependencies do %>
     <div class="date-match-view-model container-fluid">
         <div class="row-fluid">
-            <div class="span-5">
+            <div class="span5">
                 <%= vm.render_title %>
                 <div class="match-view">
                     <%= render partial: 'view_models/character_entry',
-                               collection: @character_entries,
+                               collection: vm.character_entries,
                                as: :vm %>
                 </div>
-                <%= vm.render_match_view %>
             </div>
-            <div class="span-7">
+            <div class="span7">
                 <% if vm.match.vote_graph? %>
                     <%= image_tag vm.match.vote_graph_url %>
                 <% end %>
