--- a/app/views/admin/admin/utilities.html.erb
+++ b/app/views/admin/admin/utilities.html.erb
@@ -6,12 +6,16 @@
   <div class="row-fluid">
     <div class="span6">
       <h2>Characters</h2>
-      <h4>In format <em>Japanese Character Name,English Character Name</em> - one per line</h4>
+      <h4>In format <em>Japanese Character Name*, English Character Name*, Character code, Voice actor, Voice actor code, Preliminary ranking, Previous best</em> - one per line</h4>
+      <small>*: Required field</small>
+      <br />
       <%= f.file_field :character_csv %>
     </div>
     <div class="span6">
       <h2>Series</h2>
-      <h4>In format <em>Japanese Series Name,English Series Name</em> - one per line</h4>
+      <h4>In format <em>Japanese Series Name*, English Series Name*, Colour code, Series code</em> - one per line</h4>
+      <small>*: Required field</small>
+      <br />
       <%= f.file_field :series_csv %>
     </div>
   </div>
@@ -21,12 +25,17 @@
     <h4>
       <%= f.radio_button :transform, :name_list, checked: true %>
       <%= f.label :transform_name_list do %>
-        Convert list of names in format <em>一次予選XX組 JP Name＠JP Series</em> - one per line
+        Convert list of names in either format: <em>一次予選XX組 JP Name＠JP Series</em> or <em>&lt;&lt;JP Name＠JP Series&gt;&gt;</em> - one per line<br />
+        <small>(Non-matching lines will be treated as match delimiters.)</small>
       <% end %>
     </h4>
     <h4>
       <%= f.check_box :name_order_by_name %>
       <%= f.label :name_order_by_name, 'Order by name' %>
+    </h4>
+    <h4>
+      <%= f.check_box :name_round_1_matches %>
+      <%= f.label :name_round_1_matches, 'Generate Round 1 match template' %>
     </h4>
     <%= f.file_field :name_csv %>
   </div>
@@ -40,15 +49,15 @@
     </h4>
     <h4>
       <%= f.check_box :result_show_percent %>
-      <%= f.label :result_show_percent, 'Show percentages in list output' %>
+      <%= f.label :result_show_percent, 'Show vote percentages in list output' %>
     </h4>
     <h4>
       <%= f.check_box :result_first_prelim %>
-      <%= f.label :result_first_prelim, 'Generate first prelim template' %>
+      <%= f.label :result_first_prelim, 'Generate first prelim results template' %>
     </h4>
     <h4>
       <%= f.check_box :result_second_prelim %>
-      <%= f.label :result_second_prelim, 'Generate second prelim template' %>
+      <%= f.label :result_second_prelim, 'Generate second prelim results template' %>
     </h4>
     <%= f.file_field :result_csv %>
   </div>
