Added Losers Playoff to the 2013 tournament

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,13 +6,13 @@
     This is not the official Saimoe site, nor is it responsible for the running of the tournament. The official Saimoe 2013 site is <%= link_to 'here', 'http://acst13.saimoe.me/' %>, but is in Japanese only. Many thanks to Anonymous of the <%= link_to 'unofficial English Saimoe site', 'http://www.animesaimoe.org' %>, from which all of the data on this site is collected.
   </p>
   <p>
-    <strong>Update 2013-08-07:</strong>
+    <strong>Update 2013-08-10:</strong>
   </p>
   <p>
-    The site has undergone a bit of a refresh in time for the 2013 tournament proper. Expect more features and statistics throughout this year's tournament.
+    The second preliminaries will run from the 13th to the 16th August. See <%= link_to 'animesaimoe.org', 'http://www.animesaimoe.org/' %> for information on who's qualified so far and how to take part.
   </p>
   <p>
-    The preliminary rounds to decide who qualifies for the tournament are happening at the moment, and will continue until 2013-08-16. See <%= link_to 'animesaimoe.org', 'http://www.animesaimoe.org/' %> for information on who's qualified so far and how to take part.
+    <%= link_to 'Click here', 'http://www.animesaimoe.org/2013changes.html' %> for an explanation of the <em>Losers Playoff</em>, a new double-elimination style element to this year's tournament.
   </p>
 </div>
 
