Added template for second prelim match details

--- a/app/views/admin/admin/utilities.html.erb
+++ b/app/views/admin/admin/utilities.html.erb
@@ -34,6 +34,10 @@
       <%= f.label :name_order_by_name, 'Order by name' %>
     </h4>
     <h4>
+      <%= f.check_box :name_second_prelim_matches %>
+      <%= f.label :name_second_prelim_matches, 'Generate second prelim match template' %>
+    </h4>
+    <h4>
       <%= f.check_box :name_round_1_matches %>
       <%= f.label :name_round_1_matches, 'Generate Round 1 match template' %>
     </h4>
