Added links to char/series/VA page

--- a/app/views/series/show.html.erb
+++ b/app/views/series/show.html.erb
@@ -46,7 +46,10 @@
 
 <div class="row-fluid">
   <div class="span6">
-    <h4>Total votes across all tournaments</h4>
+    <h4>
+      Total votes across all tournaments<br />
+      <small>(<%= link_to 'See all', statistics_series_by_total_votes_path %>)</small>
+    </h4>
     <%= render partial: 'view_models/statistics_list',
                object: @statistics_list_view_model,
                as: :vm %>
