Some changes for 2013 data

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,13 +6,13 @@
     This is not the official Saimoe site, nor is it responsible for the running of the tournament. The official Saimoe 2013 site is <%= link_to 'here', 'http://acst13.saimoe.me/' %>, but is in Japanese only. Many thanks to Anonymous of the <%= link_to 'unofficial English Saimoe site', 'http://www.animesaimoe.org' %>, from which all of the data on this site is collected.
   </p>
   <p>
-    <strong>Update 2013-08-10:</strong>
+    <strong>Update 2013-08-17:</strong>
   </p>
   <p>
-    The second preliminaries will run from the 13th to the 16th August. See <%= link_to 'animesaimoe.org', 'http://www.animesaimoe.org/' %> for information on who's qualified so far and how to take part.
+    Apologies for the recent downtime, our DNS provider went tits-up for a while.
   </p>
   <p>
-    <%= link_to 'Click here', 'http://www.animesaimoe.org/2013changes.html' %> for an explanation of the <em>Losers Playoff</em>, a new double-elimination style element to this year's tournament.
+    All of the new characters, series and voice actors participating in Saimoe 2013 have been added to the site. The draw for the main tournament will be happening on 2013-08-18. Follow the immediate action on <%= link_to 'animesaimoe.org', 'http://www.animesaimoe.org' %>; this site will be updated as soon as possible afterwards.
   </p>
 </div>
 
