Update for live draw

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,13 +6,10 @@
     This is not the official Saimoe site, nor is it responsible for the running of the tournament. The official Saimoe 2013 site is <%= link_to 'here', 'http://acst13.saimoe.me/' %>, but is in Japanese only. Many thanks to Anonymous of the <%= link_to 'unofficial English Saimoe site', 'http://www.animesaimoe.org' %>, from which all of the data on this site is collected.
   </p>
   <p>
-    <strong>Update 2013-08-17:</strong>
+    <strong>Update 2013-08-18:</strong>
   </p>
   <p>
-    Apologies for the recent downtime, our DNS provider went tits-up for a while.
-  </p>
-  <p>
-    All of the new characters, series and voice actors participating in Saimoe 2013 have been added to the site. The draw for the main tournament will be happening on 2013-08-18. Follow the immediate action on <%= link_to 'animesaimoe.org', 'http://www.animesaimoe.org' %>; this site will be updated as soon as possible afterwards.
+    <strong>The live draw is currently taking place. <%= link_to 'Click here', 'http://www.animesaimoe.org/livedraw.html' %> to follow the draw as it happens.</strong>
   </p>
 </div>
 
