Update for finished draw

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,7 +9,7 @@
     <strong>Update 2013-08-18:</strong>
   </p>
   <p>
-    <strong>The live draw is currently taking place. <%= link_to 'Click here', 'http://www.animesaimoe.org/livedraw.html' %> to follow the draw as it happens.</strong>
+    The draw has been made. All that's left is to get the tournament underway. See you on 2013-08-23 for the first set of Round 1 Group A matches.
   </p>
 </div>
 
