--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,6 +37,12 @@
           <%= menu_item 'Characters by total votes', statistics_characters_by_total_votes_path %>
           <%= menu_item 'Series by total votes', statistics_series_by_total_votes_path %>
           <%= menu_item 'Voice actors by total votes', statistics_voice_actors_by_total_votes_path %>
+          <%= menu_item 'Characters by match appearances', statistics_characters_by_match_appearances_path %>
+          <%= menu_item 'Series by match appearances', statistics_series_by_match_appearances_path %>
+          <%= menu_item 'Voice actors by match appearances', statistics_voice_actors_by_match_appearances_path %>
+          <%= menu_item 'Characters by match wins', statistics_characters_by_match_wins_path %>
+          <%= menu_item 'Series by match wins', statistics_series_by_match_wins_path %>
+          <%= menu_item 'Voice actors by match wins', statistics_voice_actors_by_match_wins_path %>
         <% end %>
       <% end %>
 
