--- a/app/views/date/show.html.erb
+++ b/app/views/date/show.html.erb
@@ -1,3 +1,6 @@
+<% content_for :title do %>
+  Matches for <%= @date.to_s :long %> | Saimoe
+<% end %>
 <div class="page-header">
   <h1><%= @date.to_s :long %></h1>
 </div>
