--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,20 +29,25 @@
           <% end %>
         <% end %>
 
-        <%= menu_item 'Characters', characters_path %>
-        <%= menu_item 'Series', series_index_path %>
-        <%= menu_item 'Voice Actors', voice_actors_path %>
+        <%= drop_down 'Characters' do %>
+          <%= menu_item 'View all', characters_path %>
+          <%= menu_item 'By total votes', statistics_characters_by_total_votes_path %>
+          <%= menu_item 'By match appearances', statistics_characters_by_match_appearances_path %>
+          <%= menu_item 'By match wins', statistics_characters_by_match_wins_path %>
+        <% end %>
 
-        <%= drop_down 'Statistics' do %>
-          <%= menu_item 'Characters by total votes', statistics_characters_by_total_votes_path %>
-          <%= menu_item 'Series by total votes', statistics_series_by_total_votes_path %>
-          <%= menu_item 'Voice actors by total votes', statistics_voice_actors_by_total_votes_path %>
-          <%= menu_item 'Characters by match appearances', statistics_characters_by_match_appearances_path %>
-          <%= menu_item 'Series by match appearances', statistics_series_by_match_appearances_path %>
-          <%= menu_item 'Voice actors by match appearances', statistics_voice_actors_by_match_appearances_path %>
-          <%= menu_item 'Characters by match wins', statistics_characters_by_match_wins_path %>
-          <%= menu_item 'Series by match wins', statistics_series_by_match_wins_path %>
-          <%= menu_item 'Voice actors by match wins', statistics_voice_actors_by_match_wins_path %>
+        <%= drop_down 'Series' do %>
+          <%= menu_item 'View all', series_index_path %>
+          <%= menu_item 'By total votes', statistics_series_by_total_votes_path %>
+          <%= menu_item 'By match appearances', statistics_series_by_match_appearances_path %>
+          <%= menu_item 'By match wins', statistics_series_by_match_wins_path %>
+        <% end %>
+
+        <%= drop_down 'Voice Actors' do %>
+          <%= menu_item 'View all', voice_actors_path %>
+          <%= menu_item 'By total votes', statistics_voice_actors_by_total_votes_path %>
+          <%= menu_item 'By match appearances', statistics_voice_actors_by_match_appearances_path %>
+          <%= menu_item 'By match wins', statistics_voice_actors_by_match_wins_path %>
         <% end %>
       <% end %>
 
