--- a/app/views/series/index.html.erb
+++ b/app/views/series/index.html.erb
@@ -1,3 +1,6 @@
+<% content_for :title do %>
+  Series | Saimoe
+<% end %>
 <div class="page-header">
   <div class="row-fluid">
     <div class="span12">
