--- a/app/views/series/show.html.erb
+++ b/app/views/series/show.html.erb
@@ -1,3 +1,6 @@
+<% content_for :title do %>
+  <%= @series.name %> | Saimoe
+<% end %>
 <div class="row-fluid">
   <div class="span12">
     <h1><%= @series.name %></h1>
