--- a/app/views/view_models/_match.html.erb
+++ b/app/views/view_models/_match.html.erb
@@ -1,5 +1,8 @@
 <% cache vm.dependencies do %>
     <div class="match-view-model <%= vm.info_position_class %>" style="<%= vm.style %>" <%= 'itemscope itemtype="http://schema.org/Event"'.html_safe if vm.schema_markup %>>
+        <% if vm.schema_markup %>
+            <meta itemprop="name" content="<%= vm.match.pretty(:long) %>" />
+        <% end %>
         <div class="match-entries <%= vm.info_position_class %>">
             <% vm.character_entries.each.with_index do |ce, i| %>
                 <%= render partial: 'view_models/character_entry',
