--- a/app/views/voice_actors/show.html.erb
+++ b/app/views/voice_actors/show.html.erb
@@ -1,3 +1,6 @@
+<% content_for :title do %>
+  <%= @voice_actor.full_name %> | Saimoe
+<% end %>
 <div class="row-fluid">
   <div class="span12">
     <h1><%= @voice_actor.full_name %></h1>
