Normalise length of boxes on date controller

--- a/app/views/date/show.html.erb
+++ b/app/views/date/show.html.erb
@@ -1,5 +1,5 @@
 <% content_for :title do %>
-  Matches for <%= @date.to_s :long %> | Saimoe
+  Matches for <%= @date.to_s :long %> | 
 <% end %>
 <div class="page-header">
   <h1><%= @date.to_s :long %></h1>
